# plasma-applet-ddc-util

./: CMakeLists.txt  Messages.sh
src/: CMakeLists.txt  ddc_widget.cpp  ddc_widget.h
src/package/: metadata.desktop
src/package/contents/ui/: main.qml
